--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -1451,7 +1451,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= CurrencyName %></a>
+                <%= CurrencyLinkHtml %>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -1484,29 +1484,43 @@
         </td>
         <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
         <td class="c-cardTable__space"></td>
-        <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-        <td class="c-cardTable__footer" data-card-table-width="2/3">
-            <div class="c-cardTable__content">
-                <ul class="l-collect l-collect--divider@lt">
-                    <li class="l-collect__item">
-                        <!-- [data-after-lt]: pad / mobile 自動顯示文字，值為要顯示的文字 --><!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
-                        <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--like" data-after-lt="關注" data-msg="加入關注|取消關注" data-popup="true"></a>
-                    </li>
-                    <li class="l-collect__item">
-                        <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
-                        <!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
-                        <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
-                    </li>
-                </ul>
-            </div>
-        </td>
-        <td class="c-cardTable__footer" data-card-table-width="1/3">
-            <% if (OnlineSubscriptionAvailability == 'Y') { %>
-                <div class="c-cardTable__content"><a href="#popupLogin" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
-            <% } %>
-        </td>
+        <% if (OnlineSubscriptionAvailability == 'Y') { %>
+            <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
+            <td class="c-cardTable__footer" data-card-table-width="2/3">
+                <div class="c-cardTable__content">
+                    <ul class="l-collect l-collect--divider@lt">
+                        <li class="l-collect__item">
+                            <%= FocusButtonHtml %>
+                        </li>
+                        <li class="l-collect__item">
+                            <%= CompareButtonHtml %>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+            <td class="c-cardTable__footer" data-card-table-width="1/3">
+                <div class="c-cardTable__content">
+                    <%= SubscribeButtonHtml %>
+                </div>
+            </td>
+        <% } %>
+        <% if (OnlineSubscriptionAvailability != 'Y') { %>
+            <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
+            <td class="c-cardTable__footer" data-card-table-width="2/2">
+                <div class="c-cardTable__content">
+                    <ul class="l-collect l-collect--divider@lt">
+                        <li class="l-collect__item">
+                            <%= FocusButtonHtml %>
+                        </li>
+                        <li class="l-collect__item">
+                            <%= CompareButtonHtml %>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+            <td class="c-cardTable__footer" data-card-table-width="1/3">
+            </td>
+        <% } %>
     </tr>
 </script>
 
@@ -1538,7 +1552,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= CurrencyName %></a>
+                <%= CurrencyLinkHtml %>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -1571,29 +1585,43 @@
         </td>
         <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
         <td class="c-cardTable__space"></td>
-        <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-        <td class="c-cardTable__footer" data-card-table-width="2/3">
-            <div class="c-cardTable__content">
-                <ul class="l-collect l-collect--divider@lt">
-                    <li class="l-collect__item">
-                        <!-- [data-after-lt]: pad / mobile 自動顯示文字，值為要顯示的文字 --><!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
-                        <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--like" data-after-lt="關注" data-msg="加入關注|取消關注" data-popup="true"></a>
-                    </li>
-                    <li class="l-collect__item">
-                        <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
-                        <!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
-                        <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
-                    </li>
-                </ul>
-            </div>
-        </td>
-        <td class="c-cardTable__footer" data-card-table-width="1/3">
-            <% if (OnlineSubscriptionAvailability == 'Y') { %>
-                <div class="c-cardTable__content"><a href="#popupLogin" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
-            <% } %>
-        </td>
+        <% if (OnlineSubscriptionAvailability == 'Y') { %>
+            <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
+            <td class="c-cardTable__footer" data-card-table-width="2/3">
+                <div class="c-cardTable__content">
+                    <ul class="l-collect l-collect--divider@lt">
+                        <li class="l-collect__item">
+                            <%= FocusButtonHtml %>
+                        </li>
+                        <li class="l-collect__item">
+                            <%= CompareButtonHtml %>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+            <td class="c-cardTable__footer" data-card-table-width="1/3">
+                <div class="c-cardTable__content">
+                    <%= SubscribeButtonHtml %>
+                </div>
+            </td>
+        <% } %>
+        <% if (OnlineSubscriptionAvailability != 'Y') { %>
+            <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
+            <td class="c-cardTable__footer" data-card-table-width="2/2">
+                <div class="c-cardTable__content">
+                    <ul class="l-collect l-collect--divider@lt">
+                        <li class="l-collect__item">
+                            <%= FocusButtonHtml %>
+                        </li>
+                        <li class="l-collect__item">
+                            <%= CompareButtonHtml %>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+            <td class="c-cardTable__footer" data-card-table-width="1/3">
+            </td>
+        <% } %>
     </tr>
 </script>
 
@@ -1767,6 +1795,9 @@
                     },
                     afterPagination: function () {
                         $('[data-popup]').magnificPopup();
+                        $('[eh-compare]').trigger('exec');
+                        $('[eh-focus]').trigger('exec');
+                        $('[eh-subscription-type]').trigger('exec');
                     }
                 },
                 search: {},
