--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFundReturnView.cshtml
@@ -5,80 +5,80 @@
 
 @foreach (var item in Model.AwardFunds)
 {
-    <tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only">
-        <td class="c-cardTable__top"></td>
-        <td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
-            <div class="c-cardTable__content">
-                <div class="l-target">
-                    <div class="l-target__name">
-                        <a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
-                    </div>
-                    @if (item.TargetName == "Y")
-                    {
-                        <div class="l-target__additional">
-                            <ul class="l-tag">
-                                <li class="l-tag__item">
-                                    <a href="#" class="o-tag">百元基金</a>
-                                </li>
-                            </ul>
-                        </div>
-                    }
+	<tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only">
+		<td class="c-cardTable__top"></td>
+		<td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
+			<div class="c-cardTable__content">
+				<div class="l-target">
+					<div class="l-target__name">
+						<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
+					</div>
+					@if (item.TargetName == "Y")
+					{
+						<div class="l-target__additional">
+							<ul class="l-tag">
+								<li class="l-tag__item">
+									<a href="#" class="o-tag">百元基金</a>
+								</li>
+							</ul>
+						</div>
+					}
 
-                </div>
-            </div>
-        </td>
-        <td class="c-cardTable__space"></td>
-        <td class="c-cardTable__body" data-card-table-width="1/2">
-            <div class="c-cardTable__title" data-length="5">最新淨值<br>(淨值日)</div>
-            <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate.ToString("yyyy-MM-dd")</span></div>
-        </td>
-        <td class="c-cardTable__body" data-card-table-width="1/2">
-            <div class="c-cardTable__title" data-length="5">
-                幣別
-                <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-            </div>
-            <div class="c-cardTable__content">
-                @Html.CurrencyLink(null, item.CurrencyName)
-            </div>
-        </td>
-        <td class="c-cardTable__body" data-card-table-width="1/2">
-            <div class="c-cardTable__title" data-length="5">基金類型</div>
-            <div class="c-cardTable__content">
-                @item.FundTypeNameByAPI
-            </div>
-        </td>
-        <td class="c-cardTable__body" data-card-table-width="1/2">
-            <div class="c-cardTable__title" data-length="5">年度</div>
-            <div class="c-cardTable__content">
-                @item.Year
-            </div>
-        </td>
-        <td class="c-cardTable__body" data-card-table-width="1/2">
-            <div class="c-cardTable__title" data-length="5">得獎名稱</div>
-            <div class="c-cardTable__content">
-                @item.AwardName
-            </div>
-        </td>
-        <td class="c-cardTable__space"></td>
-        <td class="c-cardTable__footer" data-card-table-width="2/3">
-            <div class="c-cardTable__content">
-                <ul class="l-collect l-collect--divider@lt">
-                    <li class="l-collect__item">
-                        @Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
-                    </li>
-                    <li class="l-collect__item">
-                        @Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
-                    </li>
-                </ul>
-            </div>
-        </td>
-        @if (item.OnlineSubscriptionAvailability == "Y")
-        {
-            <td class="c-cardTable__footer" data-card-table-width="1/3">
-                <div class="c-cardTable__content">
-                    @Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
-                </div>
-            </td>
-        }
-    </tr>
+				</div>
+			</div>
+		</td>
+		<td class="c-cardTable__space"></td>
+		<td class="c-cardTable__body" data-card-table-width="1/2">
+			<div class="c-cardTable__title" data-length="5">最新淨值<br>(淨值日)</div>
+			<div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate.ToString("yyyy-MM-dd")</span></div>
+		</td>
+		<td class="c-cardTable__body" data-card-table-width="1/2">
+			<div class="c-cardTable__title" data-length="5">
+				幣別
+				<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
+			</div>
+			<div class="c-cardTable__content">
+				@Html.CurrencyLink(null, item.CurrencyName)
+			</div>
+		</td>
+		<td class="c-cardTable__body" data-card-table-width="1/2">
+			<div class="c-cardTable__title" data-length="5">基金類型</div>
+			<div class="c-cardTable__content">
+				@item.FundTypeNameByAPI
+			</div>
+		</td>
+		<td class="c-cardTable__body" data-card-table-width="1/2">
+			<div class="c-cardTable__title" data-length="5">年度</div>
+			<div class="c-cardTable__content">
+				@item.Year
+			</div>
+		</td>
+		<td class="c-cardTable__body" data-card-table-width="1/2">
+			<div class="c-cardTable__title" data-length="5">得獎名稱</div>
+			<div class="c-cardTable__content">
+				@item.AwardName
+			</div>
+		</td>
+		<td class="c-cardTable__space"></td>
+		<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
+			<div class="c-cardTable__content">
+				<ul class="l-collect l-collect--divider@lt">
+					<li class="l-collect__item">
+						@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+					</li>
+					<li class="l-collect__item">
+						@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+					</li>
+				</ul>
+			</div>
+		</td>
+		<td class="c-cardTable__footer" data-card-table-width="1/3">
+			<div class="c-cardTable__content">
+				@if (item.OnlineSubscriptionAvailability == "Y")
+				{
+					@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
+				}
+			</div>
+		</td>
+	</tr>
 }
