--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRankReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRankReturnView.cshtml
@@ -54,26 +54,27 @@
 				<div class="c-cardTable__content">@item.ScaleMillions</div>
 			</td>
 			<td class="c-cardTable__space"></td>
-			<td class="c-cardTable__footer" data-card-table-width="2/3">
+			<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
 				<div class="c-cardTable__content">
 					<ul class="l-collect l-collect--divider@lt">
 						<li class="l-collect__item">
-							@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+							@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
 						</li>
 						<li class="l-collect__item">
-							@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+							@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
 						</li>
 					</ul>
 				</div>
 			</td>
-			@if (item.OnlineSubscriptionAvailability == "Y")
-			{
-				<td class="c-cardTable__footer" data-card-table-width="1/3">
-					<div class="c-cardTable__content">
-						@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
-					</div>
-				</td>
-			}
+			<td class="c-cardTable__footer" data-card-table-width="1/3">
+				<div class="c-cardTable__content">
+					@if (item.OnlineSubscriptionAvailability == "Y")
+					{
+						@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
+					}
+				</div>
+			</td>
+
 		</tr>
 	}
 }
