--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HotFund/HotFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HotFund/HotFundReturnView.cshtml
@@ -84,25 +84,25 @@
             }
         </td>
         <td class="c-cardTable__space"></td>
-        <td class="c-cardTable__footer" data-card-table-width="2/3">
-            <div class="c-cardTable__content">
-                <ul class="l-collect l-collect--divider@lt">
-                    <li class="l-collect__item">
-                        @Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
-                    </li>
-                    <li class="l-collect__item">
-                        @Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
-                    </li>
-                </ul>
-            </div>
-        </td>
-        @if (item.OnlineSubscriptionAvailability == "Y")
-        {
-            <td class="c-cardTable__footer" data-card-table-width="1/3">
-                <div class="c-cardTable__content">
-                    @Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
-                </div>
-            </td>
-        }
+		<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
+			<div class="c-cardTable__content">
+				<ul class="l-collect l-collect--divider@lt">
+					<li class="l-collect__item">
+						@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+					</li>
+					<li class="l-collect__item">
+						@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+					</li>
+				</ul>
+			</div>
+		</td>
+		<td class="c-cardTable__footer" data-card-table-width="1/3">
+			<div class="c-cardTable__content">
+				@if (item.OnlineSubscriptionAvailability == "Y")
+				{
+					@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
+				}
+			</div>
+		</td>
     </tr>
 }
