--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
@@ -3,6 +3,11 @@
 @using Feature.Wealth.Component.Models.NewArrivalETF
 @model NewArrivalEtfModel
 
+@if (Model == null)
+{
+	return;
+}
+
 @foreach (var item in Model.NewETFs)
 {
 	if (item.ProductCode != null && item.ProductCode != "")
@@ -107,7 +112,7 @@
 				<div class="c-cardTable__content">@item.RiskLevel</div>
 			</td>
 			<td class="c-cardTable__space"></td>
-			<td class="c-cardTable__footer" data-card-table-width="2/3">
+			<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
 				<div class="c-cardTable__content">
 					<ul class="l-collect l-collect--divider@lt">
 						<li class="l-collect__item">
@@ -119,14 +124,14 @@
 					</ul>
 				</div>
 			</td>
-			@if (item.OnlineSubscriptionAvailability == "Y")
-			{
-				<td class="c-cardTable__footer" data-card-table-width="1/3">
-					<div class="c-cardTable__content">
+			<td class="c-cardTable__footer" data-card-table-width="1/3">
+				<div class="c-cardTable__content">
+					@if (item.OnlineSubscriptionAvailability == "Y")
+					{
 						@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
-					</div>
-				</td>
-			}
+					}
+				</div>
+			</td>
 		</tr>
 	}
 }
