--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundReturn.cshtml
@@ -128,7 +128,7 @@
 				}
 			</td>
 			<td class="c-cardTable__space"></td>
-			<td class="c-cardTable__footer" data-card-table-width="2/3">
+			<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
 				<div class="c-cardTable__content">
 					<ul class="l-collect l-collect--divider@lt">
 						<li class="l-collect__item">
@@ -140,14 +140,14 @@
 					</ul>
 				</div>
 			</td>
-			@if (item.OnlineSubscriptionAvailability == "Y")
-			{
-				<td class="c-cardTable__footer" data-card-table-width="1/3">
-					<div class="c-cardTable__content">
+			<td class="c-cardTable__footer" data-card-table-width="1/3">
+				<div class="c-cardTable__content">
+					@if (item.OnlineSubscriptionAvailability == "Y")
+					{
 						@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
-					</div>
-				</td>
-			}
+					}
+				</div>
+			</td>
 		</tr>
 	}
 
