--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
@@ -8,130 +8,134 @@
 	return;
 }
 
-@foreach (var item in Model.NewETFs)
+
+@if (Model.NewETFs.Count() != 0)
 {
-	if (item.ProductCode != null && item.ProductCode != "")
+	foreach (var item in Model.NewETFs)
 	{
-		<tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only" data-product-id="@item.ProductCode">
-			<td class="c-cardTable__top"></td>
-			<td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
-				<div class="c-cardTable__content">
-					<div class="l-target">
-						<div class="l-target__name">
-							<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
-						</div>
-					</div>
-				</div>
-			</td>
-			<td class="c-cardTable__space"></td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">交易所代碼</div>
-				<div class="c-cardTable__content">@item.ExchangeCode</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
-				<div class="c-cardTable__content">
-					@if (item.MarketPriceFormat != null)
-					{
-						@item.MarketPriceFormat
-
-						<br>
-
-						<span class="t-date">@item.NetAssetValueDateFormat</span>
-					}
-					else
-					{
-						<span>-</span>
-					}
-				</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">
-					幣別
-					<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-				</div>
-				<div class="c-cardTable__content">
-					@Html.CurrencyLink(null, item.CurrencyName)
-				</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">折溢價(%)</div>
-				@if (item.DiscountPremiumFormat != null)
-				{
-					if (item.DiscountPremiumFormat >= 0)
-					{
-						<div class="c-cardTable__content">
-							<span class="o-rise">@item.DiscountPremiumFormat%</span>
-						</div>
-					}
-					else
-					{
-						<div class="c-cardTable__content">
-							<span class="o-fall">@item.DiscountPremiumFormat%</span>
-						</div>
-					}
-				}
-				else
-				{
+		if (item.ProductCode != null && item.ProductCode != "")
+		{
+			<tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only" data-product-id="@item.ProductCode">
+				<td class="c-cardTable__top"></td>
+				<td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
 					<div class="c-cardTable__content">
-						<span>-</span>
-					</div>
-				}
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-
-				<div class="c-cardTable__title" data-length="5">6個月報酬</div>
-				@if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat != null)
-				{
-					if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat >= 0)
-					{
-						<div class="c-cardTable__content">
-							<span class="o-rise">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+						<div class="l-target">
+							<div class="l-target__name">
+								<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
+							</div>
 						</div>
+					</div>
+				</td>
+				<td class="c-cardTable__space"></td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+					<div class="c-cardTable__title" data-length="5">交易所代碼</div>
+					<div class="c-cardTable__content">@item.ExchangeCode</div>
+				</td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+					<div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
+					<div class="c-cardTable__content">
+						@if (item.MarketPriceFormat != null)
+						{
+							@item.MarketPriceFormat
+
+							<br>
+
+							<span class="t-date">@item.NetAssetValueDateFormat</span>
+						}
+						else
+						{
+							<span>-</span>
+						}
+					</div>
+				</td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+					<div class="c-cardTable__title" data-length="5">
+						幣別
+						<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
+					</div>
+					<div class="c-cardTable__content">
+						@Html.CurrencyLink(null, item.CurrencyName)
+					</div>
+				</td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+					<div class="c-cardTable__title" data-length="5">折溢價(%)</div>
+					@if (item.DiscountPremiumFormat != null)
+					{
+						if (item.DiscountPremiumFormat >= 0)
+						{
+							<div class="c-cardTable__content">
+								<span class="o-rise">@item.DiscountPremiumFormat%</span>
+							</div>
+						}
+						else
+						{
+							<div class="c-cardTable__content">
+								<span class="o-fall">@item.DiscountPremiumFormat%</span>
+							</div>
+						}
 					}
 					else
 					{
 						<div class="c-cardTable__content">
-							<span class="o-fall">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+							<span>-</span>
 						</div>
 					}
-				}
-				else
-				{
-					<div class="c-cardTable__content">
-						<span>-</span>
-					</div>
-				}
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">投資標的</div>
-				<div class="c-cardTable__content">@item.InvestmentTargetName</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">風險屬性</div>
-				<div class="c-cardTable__content">@item.RiskLevel</div>
-			</td>
-			<td class="c-cardTable__space"></td>
-			<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
-				<div class="c-cardTable__content">
-					<ul class="l-collect l-collect--divider@lt">
-						<li class="l-collect__item">
-							@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
-						</li>
-						<li class="l-collect__item">
-							@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
-						</li>
-					</ul>
-				</div>
-			</td>
-			<td class="c-cardTable__footer" data-card-table-width="1/3">
-				<div class="c-cardTable__content">
-					@if (item.OnlineSubscriptionAvailability == "Y")
+				</td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+
+					<div class="c-cardTable__title" data-length="5">6個月報酬</div>
+					@if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat != null)
 					{
-						@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
+						if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat >= 0)
+						{
+							<div class="c-cardTable__content">
+								<span class="o-rise">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+							</div>
+						}
+						else
+						{
+							<div class="c-cardTable__content">
+								<span class="o-fall">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+							</div>
+						}
 					}
-				</div>
-			</td>
-		</tr>
+					else
+					{
+						<div class="c-cardTable__content">
+							<span>-</span>
+						</div>
+					}
+				</td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+					<div class="c-cardTable__title" data-length="5">投資標的</div>
+					<div class="c-cardTable__content">@item.InvestmentTargetName</div>
+				</td>
+				<td class="c-cardTable__body" data-card-table-width="1/2">
+					<div class="c-cardTable__title" data-length="5">風險屬性</div>
+					<div class="c-cardTable__content">@item.RiskLevel</div>
+				</td>
+				<td class="c-cardTable__space"></td>
+				<td class="c-cardTable__footer" data-card-table-width="@((item.OnlineSubscriptionAvailability == "Y") ? "2/3" : "1/1")">
+					<div class="c-cardTable__content">
+						<ul class="l-collect l-collect--divider@lt">
+							<li class="l-collect__item">
+								@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
+							</li>
+							<li class="l-collect__item">
+								@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
+							</li>
+						</ul>
+					</div>
+				</td>
+				<td class="c-cardTable__footer" data-card-table-width="1/3">
+					<div class="c-cardTable__content">
+						@if (item.OnlineSubscriptionAvailability == "Y")
+						{
+							@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
+						}
+					</div>
+				</td>
+			</tr>
+		}
 	}
 }
